<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="ASPshortcut" Id="{3a452228-4556-46fb-a5be-0d32ba1336ce}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK ASPshortcut
VAR_INPUT
	Okay		:BOOL;
	Man         :bool;
	Auto        :bool;
	Reset       :bool;
	Run_Auto    :bool;
END_VAR
VAR_OUTPUT
	ASP_output :TASPstate;
END_VAR
VAR
	TON_OKdelay :ton;
END_VAR
]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Fbd"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems">
                    <o t="BoxTreeDemux">
                      <v n="VarId">8</v>
                      <o n="Input" t="BoxTreeOperand">
                        <o n="Operand" t="Operand">
                          <v n="Operand">"Okay"</v>
                          <v n="Type">"BOOL"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">false</v>
                          <v n="Id">18L</v>
                        </o>
                        <v n="Id">17L</v>
                      </o>
                      <v n="Id">71L</v>
                    </o>
                    <o t="BoxTreeAssign">
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"ASP_Output.Ok"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">19L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeDemux">
                        <v n="VarId">8</v>
                        <n n="Input" />
                        <v n="Id">72L</v>
                      </o>
                      <v n="Id">20L</v>
                    </o>
                    <o t="BoxTreeAssign">
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"ASP_output.Del_Ok"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">79L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeBox">
                        <v n="BoxType">"TON"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"TON_OKdelay"</v>
                          <v n="Type">"TON"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">74L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">76L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems">
                          <o t="BoxTreeDemux">
                            <v n="VarId">8</v>
                            <n n="Input" />
                            <v n="Id">73L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"T#1s"</v>
                              <v n="Type">"TIME"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">78L</v>
                            </o>
                            <v n="Id">77L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>IN</v>
                            <v>PT</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>TIME</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Q</v>
                            <v>ET</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>TIME</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <v n="EN">false</v>
                        <v n="ENO">false</v>
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">75L</v>
                      </o>
                      <v n="Id">80L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">9L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"ASP_Output.Rst"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">25L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeOperand">
                        <o n="Operand" t="Operand">
                          <v n="Operand">"Reset"</v>
                          <v n="Type">"BOOL"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">false</v>
                          <v n="Id">24L</v>
                        </o>
                        <v n="Id">23L</v>
                      </o>
                      <v n="Id">26L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">22L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems">
                    <o t="BoxTreeDemux">
                      <v n="VarId">2</v>
                      <o n="Input" t="BoxTreeOperand">
                        <o n="Operand" t="Operand">
                          <v n="Operand">"Man"</v>
                          <v n="Type">"BOOL"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">false</v>
                          <v n="Id">39L</v>
                        </o>
                        <v n="Id">38L</v>
                      </o>
                      <v n="Id">49L</v>
                    </o>
                    <o t="BoxTreeAssign">
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"ASP_Output.Man"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">40L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeDemux">
                        <v n="VarId">2</v>
                        <n n="Input" />
                        <v n="Id">50L</v>
                      </o>
                      <v n="Id">41L</v>
                    </o>
                    <o t="BoxTreeAssign">
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"ASP_Output.S_Man"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">52L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeDemux">
                        <v n="VarId">2</v>
                        <n n="Input" />
                        <v n="Id">51L</v>
                      </o>
                      <v n="Id">53L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">37L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems">
                    <o t="BoxTreeDemux">
                      <v n="VarId">3</v>
                      <o n="Input" t="BoxTreeOperand">
                        <o n="Operand" t="Operand">
                          <v n="Operand">"Auto"</v>
                          <v n="Type">"BOOL"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">false</v>
                          <v n="Id">43L</v>
                        </o>
                        <v n="Id">42L</v>
                      </o>
                      <v n="Id">46L</v>
                    </o>
                    <o t="BoxTreeAssign">
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"ASP_Output.Auto"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">44L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeDemux">
                        <v n="VarId">3</v>
                        <n n="Input" />
                        <v n="Id">47L</v>
                      </o>
                      <v n="Id">45L</v>
                    </o>
                    <o t="BoxTreeAssign">
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"ASP_Output.S_Aut"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">54L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeDemux">
                        <v n="VarId">3</v>
                        <n n="Input" />
                        <v n="Id">48L</v>
                      </o>
                      <v n="Id">55L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">21L</v>
                </o>
              </l2>
              <v n="BranchCounter">8</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
            <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
            <Type n="BoxTreeDemux">{b1d55618-017c-4bc5-990a-55c2f27d9d3a}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
  </POU>
</TcPlcObject>